<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_store">

    <fragment
        android:id="@+id/navigation_diary"
        android:name="com.rummy.sulung.view.ui.diary.DiaryFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_diary" />

    <fragment
        android:id="@+id/navigation_store"
        android:name="com.rummy.sulung.view.ui.store.StoreFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_store" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.rummy.sulung.view.ui.setting.SettingFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_setting" />
</navigation>