<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout
    android:id="@+id/parentLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    tools:context=".view.nickname.NicknameOfFragment2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:textSize="28sp"
        android:text="@string/nickname_welcome"
        android:textColor="#343434"
        android:lineSpacingExtra="1sp"
        android:fontFamily="@font/nanum_bareunhipi"
        android:includeFontPadding="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="72dp"
        android:textSize="15sp"
        android:text="@string/nickname_welcome_info1"
        android:textColor="#343434"
        android:lineSpacingExtra="1sp"
        android:fontFamily="@font/pretendard_bold"
        android:includeFontPadding="false" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nickNameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/Widget.App.TextInputLayout"
        app:hintEnabled="true"
        app:counterEnabled="false"
        app:counterMaxLength="7"
        android:hint="@string/nickname_welcome_inputTextField_hint"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nickNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:textSize="15sp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:inputType="textPersonName"
            android:includeFontPadding="false"
            android:fontFamily="@font/pretendard_regular"
            android:ems="10"
            hideKeyboardOnInputDone="@{true}"
            hideKeyboardOnOutTouch="@{true}">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:outlineProvider="none"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="end"
        android:text="@string/next2"
        android:textSize="20sp"
        android:background="@drawable/btn"
        android:textColor="@color/btn_text"
        android:fontFamily="@font/pretendard_medium"
        android:includeFontPadding="false"
        android:enabled="false"/>
</LinearLayout>
</layout>