<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="termsviewmodel"
            type="com.rummy.sulung.viewmodel.TermsViewModel" />
    </data>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.TermsNicknameActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="64dp"
            android:textSize="28sp"
            android:text="@string/message1"
            android:textColor="#343434"
            android:lineSpacingExtra="1sp"
            android:fontFamily="@font/nanum_bareunhipi"
            android:includeFontPadding="false" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_box_all"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:checked="@={termsviewmodel.termsallAgree}"
                android:button="@null"
                android:background="@drawable/custom_checkbox" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="15sp"
                android:text="@string/all_agree"
                android:textColor="#343434"
                android:lineSpacingExtra="1sp"
                android:fontFamily="@font/pretendard_bold"
                android:includeFontPadding="false" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="12dp"
            android:background="@color/light_gray"/>

        <LinearLayout
            android:id="@+id/terms_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_box_1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:checked="@={termsviewmodel.termsOfservice}"
                android:button="@null"
                android:background="@drawable/custom_checkbox" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="15sp"
                android:text="@string/check_terms_of_service"
                android:textColor="#343434"
                android:lineSpacingExtra="1sp"
                android:fontFamily="@font/pretendard_regular"
                android:includeFontPadding="false" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_gravity="center|end"
                app:srcCompat="@drawable/terms_right_arrow"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/terms_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:visibility="gone"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_box_2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:button="@null"
                android:checked="@={termsviewmodel.termsOfpersonal}"
                android:background="@drawable/custom_checkbox" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="15sp"
                android:text="@string/check_terms_of_personal_info"
                android:textColor="#343434"
                android:lineSpacingExtra="1sp"
                android:fontFamily="@font/pretendard_regular"
                android:includeFontPadding="false" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_marginEnd="12dp"
                app:srcCompat="@drawable/terms_right_arrow"/>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:outlineProvider="none"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="end"
            android:enabled="@{termsviewmodel.isAllAgreeTrue ? true : false}"
            android:text="@string/next"
            android:textSize="20sp"
            android:background="@drawable/btn"
            android:textColor="@color/btn_text"
            android:fontFamily="@font/pretendard_medium"
            android:includeFontPadding="false" />
    </LinearLayout>
</layout>