<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="40dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.terms.TermsOfPersonalInfoActivity"
    tools:ignore="ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:layout_marginStart="20dp"
            android:textColor="#343434"
            android:textSize="16sp"
            android:includeFontPadding="false"
            android:layout_marginTop="32dp"
            android:text="@string/record_title1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/select_date"
            style="@style/Widget.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:endIconCheckable="true"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_inputtext_calendar"
            app:endIconTint="@color/fab_bg"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dateInput"
                hideKeyboardOnInputDone="@{true}"
                android:background="@drawable/bg_rounded_border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="#343434"
                android:enabled="false"
                android:fontFamily="@font/pretendard_regular"
                android:includeFontPadding="false"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textSize="15sp"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pretendard_medium"
            android:layout_marginStart="20dp"
            android:textColor="#343434"
            android:textSize="16sp"
            android:includeFontPadding="false"
            android:layout_marginTop="32dp"
            android:text="@string/record_title2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/alcohol_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/pretendard_medium"
            android:textColor="#343434"
            android:textSize="16sp"
            android:includeFontPadding="false"
            android:layout_marginTop="32dp"
            android:text="@string/record_title3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/emotion_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/regEasily_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="40dp"
            android:outlineProvider="none"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="45dp"
            android:layout_gravity="end"
            android:text="@string/record_btn"
            android:textSize="16sp"
            android:background="@drawable/btn"
            android:textColor="@color/btn_text"
            android:fontFamily="@font/pretendard_regular"
            android:includeFontPadding="false" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>